--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     <div class="container mx-auto py-5">
         <div class="flex justify-center items-center">
             <div class="loader">
-                <button id="play" class="bg-blue-500 text-white py-2 px-4 rounded">Start</button>
+                <div class="flex justify-center items-center h-full mt-24">
+                    <h1 class="text-white text-center px-2 ">Selamat Ulang Tahun yaa, Semoga yang kamu mau di kabul kan secepat nya, Happy Birthday tata</h1>
+                </div>
+                <button id="play" class="bg-blue-500 text-white py-2 px-4 rounded cursor-pointer">Start</button>
             </div>
         </div>
     </div>
-    <audio class="song" controls loop class="block mx-auto my-5">
+    <audio class="song block mx-auto my-5 " controls loop>
         <source src="music.mp3">
         </source>
         Your browser isn't invited for super fun audio time.
@@ -44,7 +47,7 @@
                             <h2 class="text-xl ">and all the things you love the most.</h2>
                             <h2 class="text-xl ">May this special day bring you endless happiness </h2>
                             <h2 class="text-xl ">and may all your dreams come true.</h2>
-                            <h2 class="text-xl ">Here's to another year of amazing adventures 
+                            <h2 class="text-xl ">Here's to another year of amazing adventures
                             </h2>
                             <h2>and unforgettable moments.</h2>
                             <h2 class="text-xl ">Have an incredible birthday!</h2>
